# dot-chess

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
dot_chess/: .dockerignore  Cargo.toml  board.rs  common.rs  event.rs  game.rs  gameover.rs  lib.rs  perft.rs  zobrist.rs
dot_chess/board/: bitboard.rs  direction.rs  event.rs  file.rs  mod.rs  mov.rs  piece.rs  ply.rs  rank.rs  side.rs  square.rs
dotchess/: Cargo.toml  common.rs  game.rs  gameover.rs  lib.rs  zobrist.rs
dotchess/board/: direction.rs  file.rs  piece.rs  rank.rs  side.rs  square.rs
perft/: Cargo.toml
perft/src/: main.rs
