[package]
name = "dotchess"
version = "0.1.0"
authors = ["Lubos Kozmon <contact@elkozmon.com>"]
edition = "2018"

[profile.release]
overflow-checks = false

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

bitintr = "0.3.0"
num = { version = "0.4", default-features = false }
num-derive = { version = "0.3", default-features = false }
num-traits = { version = "0.2", default-features = false }

[lib]
name = "dotchess"
path = "lib.rs"
crate-type = [
    "rlib",
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []